--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Noto Sans', serif;
 }
 
 #app {
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Noto Sans', serif;
 }
